# Qt_exercises

Notepad/: CMakeLists.txt  Resources.qrc  mainwindow.cpp  mainwindow.ui
